--- a/packages/react-pdf/package.json
+++ b/packages/react-pdf/package.json
@@ -68,9 +68,10 @@
     "@biomejs/biome": "^1.8.0",
     "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^15.0.0",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "*",
     "@types/react": "*",
+    "@types/react-dom": "*",
     "@types/warning": "^3.0.0",
     "canvas": "^2.11.2",
     "core-js": "^3.37.0",
