Pin Biome version

--- a/packages/react-pdf/package.json
+++ b/packages/react-pdf/package.json
@@ -65,7 +65,7 @@
     "warning": "^4.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.8.3",
+    "@biomejs/biome": "1.8.3",
     "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^16.0.0",
