--- a/sample/next-pages/tsconfig.json
+++ b/sample/next-pages/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "preserve",
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
+    "moduleDetection": "force",
     "moduleResolution": "bundler",
     "noEmit": true,
     "noUncheckedIndexedAccess": true,
