--- a/sample/webpack5/tsconfig.json
+++ b/sample/webpack5/tsconfig.json
@@ -4,6 +4,7 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "module": "preserve",
+    "moduleDetection": "force",
     "noEmit": true,
     "noUncheckedIndexedAccess": true,
     "skipLibCheck": true,
